changed html ui

--- a/test.html
+++ b/test.html
@@ -18,8 +18,85 @@
 </head>
 <body>
 
-<h1>TEST PEDALBOARD SINGLE PEDAL MODE (Login Required)</h1>
-<div id="results">Caricamento pedalboard...</div>
+  <div class="bx--loading-overlay" id="pageLoader" style="display:none;">
+      <div class="bx--loading" role="status">
+        <svg class="bx--loading__svg" viewBox="-75 -75 150 150">
+          <circle class="bx--loading__background" cx="0" cy="0" r="37.5"/>
+          <circle class="bx--loading__stroke" cx="0" cy="0" r="37.5"/>
+        </svg>
+      </div>
+    </div>
+
+
+
+  <!-- Zoom spinner -->
+  <div id="zoomSpinner" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 10000; background: rgba(255,255,255,0.7); padding: 1rem; border-radius: 8px;">
+    <div class="bx--loading bx--loading--small" role="alert" aria-live="assertive" aria-label="Loading">
+      <svg class="bx--loading__svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
+        <circle class="bx--loading__background" cx="50" cy="50" r="44" stroke-width="8"></circle>
+        <circle class="bx--loading__stroke" cx="50" cy="50" r="44" stroke-width="8"></circle>
+      </svg>
+    </div>
+  </div>
+  
+  <!-- Main content area -->
+  <div id="page-content">
+    <div id="preset-controls" style="display: none; align-items: center; gap: 8px;">
+      <!-- Pedalboard selection -->
+      <select id="pedalboardSelect"></select>
+
+       <a href="rigs" class="showDesktop bx--btn bx--btn--tertiary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Rigs
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"/>
+        </svg>   
+      </a> 
+  
+    </div>
+
+    <br><br><br><br>
+
+    <div id="preset" style="flex-direction: column; align-items: center;"></div>
+  </div>
+
+
+
+    <div class="zoom-controls">
+      <button id="zoomIn" class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomIn()">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M18 12L14 12 14 8 12 8 12 12 8 12 8 14 12 14 12 18 14 18 14 14 18 14 18 12z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>
+        </svg>
+      </button>
+      <button id="zoomOut" class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomOut()">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M8 12H18V14H8z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>
+        </svg>
+      </button>
+      <button id="zoomReset" class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="resetZoom()">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M22.4478,21A10.855,10.855,0,0,0,25,14,10.99,10.99,0,0,0,6,6.4658V2H4v8h8V8H7.332a8.9768,8.9768,0,1,1-2.1,8H3.1912A11.0118,11.0118,0,0,0,14,25a10.855,10.855,0,0,0,7-2.5522L28.5859,30,30,28.5859Z"/>
+        </svg>
+      </button>
+    </div>
+
+
+
+
+  <!-- Fallback content -->
+  <div id="noPedalboardsContainer" style="display: none; text-align: center; margin-top: 7em;">
+    <p style="font-size: 1.25em;">No Rig found.</p>
+    <a href="rigs" class="bx--btn bx--btn--primary" style="margin-top: 1em;">Manage Rigs</a>
+  </div>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="test-plex.js"></script>
+  <script src="plexes.js"></script>
+  <script src="utils.js"></script>
+  <!-- <script src="local-plexes.js"></script> -->
+  <script src="fullscreen-menu.js"></script>
+  <script src="folder.js"></script>
+  <script src="nav-plexes.js"></script>
+  <script src="zoom.js"></script>
 
 <script>
 (async function() {
