--- a/test.html
+++ b/test.html
@@ -9,7 +9,6 @@
 <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="utils.js"></script>
 <style>
   body { font-family: sans-serif; padding: 20px; }
   #results { margin-top: 20px; border: 1px solid #ccc; padding: 10px; min-height: 200px; }
@@ -45,7 +44,7 @@
       <!-- Pedalboard selection -->
       <select id="pedalboardSelect"></select>
 
-       <a href="rigs" class="showDesktop bx--btn bx--btn--tertiary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Rigs
+       <a href="gears" class="showDesktop bx--btn bx--btn--tertiary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Gears
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"/>
         </svg>   
@@ -90,12 +89,10 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="test-plex.js"></script>
-  <script src="plexes.js"></script>
   <script src="utils.js"></script>
   <!-- <script src="local-plexes.js"></script> -->
   <script src="fullscreen-menu.js"></script>
-  <script src="folder.js"></script>
-  <script src="nav-plexes.js"></script>
+  <script src="nav.js"></script>
   <script src="zoom.js"></script>
 
 <script>
