--- a/test.html
+++ b/test.html
@@ -40,17 +40,6 @@
   
   <!-- Main content area -->
   <div id="page-content">
-    <div id="preset-controls" style="display: none; align-items: center; gap: 8px;">
-      <!-- Pedalboard selection -->
-      <select id="pedalboardSelect"></select>
-
-       <a href="gears" class="showDesktop bx--btn bx--btn--tertiary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Gears
-        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-          <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"/>
-        </svg>   
-      </a> 
-  
-    </div>
 
     <br><br><br><br>
 
@@ -82,8 +71,8 @@
 
   <!-- Fallback content -->
   <div id="noPedalboardsContainer" style="display: none; text-align: center; margin-top: 7em;">
-    <p style="font-size: 1.25em;">No Rig found.</p>
-    <a href="rigs" class="bx--btn bx--btn--primary" style="margin-top: 1em;">Manage Rigs</a>
+    <p style="font-size: 1.25em;">No Gear found.</p>
+    <a href="gears" class="bx--btn bx--btn--primary" style="margin-top: 1em;">Back to Gears</a>
   </div>
 
   <!-- Scripts -->
